--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,22 @@
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx4G
 
 # BTA
 bta_version=1.7.7.0
 
-# Loader (quilt)
-loader_version=0.20.0-beta.3-bta
+# Loader
+loader_version=0.14.19-babric.1-bta
 
 # HalpLibe
-halplibe_version=1.1.5
+halplibe_version=2.1.1
 
 # Fabric Language Kotlin
 flk_version=1.9.4
 kotlin_version=1.8.21
 
+# EnergyAPI
+energyapi_version=1.1.4
+
 # Mod
-mod_version=1.0.0
+mod_version=0.1.0-1.7.7.0
 mod_group=turniplabs
-mod_name=examplemod
+mod_name=industry
