--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,14 @@ repositories {
 		}
 		metadataSources { artifact() }
 	}
+	ivy {
+		url = "https://github.com/UselessBullets"
+		patternLayout {
+			artifact "[organisation]/releases/download/v[revision]/[module]-[revision].jar"
+			m2compatible = true
+		}
+		metadataSources { artifact() }
+	}
 }
 
 dependencies {
@@ -94,7 +102,7 @@ dependencies {
 	// Helper library
 	modImplementation "bta-halplibe:halplibe:${project.halplibe_version}"
 
-	modImplementation "ModMenu:ModMenu:2.0.0"
+	modImplementation "com.github.Turnip-Labs:ModMenu:2.0.2"
 
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
 	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.16.0"
@@ -103,14 +111,17 @@ dependencies {
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
 
 	// Energy API
-	modImplementation "sunsetutils:sunsetutils:1.8.2"
+	modImplementation "sunsetutils:sunsetutils:1.9.0"
 	modImplementation "energyapi:energyapi:${project.energyapi_version}"
 
 	// Guidebook++
-	modImplementation "guidebookpp:guidebookpp:1.5.5"
+	modImplementation "guidebookpp:guidebookpp:1.5.6"
 
 	// BTWaila
 	modImplementation "btwaila:btwaila:0.2.2"
+
+	// Prismatic Libe
+	modImplementation "BTA_Babric_PrismaticLibe:prismaticlibe:${project.prismatic_version}"
 
 	var log4jVersion = "2.20.0"
 	implementation("org.apache.logging.log4j:log4j-core:${log4jVersion}")
