--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ bta_version=1.7.7.0_02
 loader_version=0.14.19-babric.1-bta
 
 # HalpLibe
-halplibe_version=2.1.6
+halplibe_version=2.3.1
 
 # Fabric Language Kotlin
 flk_version=1.9.4
@@ -15,6 +15,9 @@ kotlin_version=1.8.21
 
 # EnergyAPI
 energyapi_version=1.1.6
+
+# Prismatic Libe
+prismatic_version=2.2.0
 
 # Mod
 mod_version=0.1.1-1.7.7.0
