--- a/build.gradle
+++ b/build.gradle
@@ -96,6 +96,8 @@ dependencies {
 
 	modImplementation "com.github.Turnip-Labs:ModMenu:2.0.2"
 
+	modImplementation "nocrashes:nocrashes:1.0.4"
+
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
 	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.16.0"
 
