--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ bta_version=1.7.7.0_02
 loader_version=0.14.19-babric.1-bta
 
 # HalpLibe
-halplibe_version=2.4.0
+halplibe_version=2.5.0
 
 # Fabric Language Kotlin
 flk_version=1.9.4
@@ -17,6 +17,6 @@ kotlin_version=1.8.21
 energyapi_version=1.1.9
 
 # Mod
-mod_version=0.1.3-1.7.7.0
+mod_version=0.2.0-1.7.7.x
 mod_group=turniplabs
 mod_name=industry
