--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,9 @@ kotlin_version=1.8.21
 # EnergyAPI
 energyapi_version=1.1.9
 
+# Terrain API
+terrain_api_version=1.1.3
+
 # Mod
 mod_version=0.2.0-1.7.7.x
 mod_group=turniplabs
