--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,6 @@ energyapi_version=1.1.9
 terrain_api_version=1.3.0
 
 # Mod
-mod_version=0.4.0.1.7.7.x
+mod_version=0.4.1-7.0
 mod_group=turniplabs
 mod_name=industry
