--- a/build.gradle
+++ b/build.gradle
@@ -109,8 +109,8 @@ dependencies {
 	modImplementation "com.github.Turnip-Labs:bta-halplibe:${project.halplibe_version}"
 
 	// Energy API
-	modImplementation "catalyst:catalyst-core:${catalyst_core}"
-	modImplementation "catalyst:catalyst-energy:${catalyst_energy}"
+	modImplementation files('dependencies/catalyst-core-1.1.3.jar')
+	modImplementation files('dependencies/catalyst-energy-1.0.3.jar')
 
 	// Terrain API
 	modImplementation "TerrainAPI:terrainapi:${project.terrain_api_version}"
